# python-skills

./: .cursorrules  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  llms.txt
.agents/skills/python-standards/: SKILL.md
.agents/workflows/: new-endpoint.md
.cursor/rules/: python-core.mdc  python-security.mdc  python-testing.mdc
.github/: copilot-instructions.md
.kiro/steering/: product.md  structure.md  tech.md
agents/: qa-agent.md
docs/: _config.yml  ai-tool-compatibility.md  incident-response.md  index.md  onboarding.md  tech-debt.md
docs/adr/: ADR-template.md
examples/fastapi-app/: README.md  pyproject.toml
examples/fastapi-app/app/: main.py
examples/fastapi-app/app/api/v1/: health.py  router.py  users.py
examples/fastapi-app/app/core/: config.py  exceptions.py  logging.py
examples/fastapi-app/app/services/: user_service.py
examples/fastapi-app/tests/: test_api.py
rules/: api-design.md  code-review.md  git-workflow.md
skills/common/: api-auth.md  async-patterns.md  ci-cd.md  code-style-index.md  code-style.md  data-migrations.md  db-design.md  dependency-management.md  deployment.md  error-handling.md  feature-flags.md  folder-structure.md  llm-patterns.md  logging.md  microservices.md  observability.md  performance.md  security.md  testing.md
skills/django/: SKILL.md
skills/drf/: SKILL.md
skills/fastapi/: SKILL.md
skills/flask/: SKILL.md
